deployment-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-redis
  namespace: itfasilkom
spec:
  ports:
    - port: 6379
  selector:
    app: ${APP_NAME}-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}-redis
  namespace: itfasilkom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_NAME}-redis
  template:
    metadata:
      labels:
        app: ${APP_NAME}-redis
    spec:
      containers:
        - name: ${APP_NAME}-redis
          image: redis:6
          ports:
            - containerPort: 6379
