deployment-kwl-dev-backend.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  # name: kwl-dev-backend 
  name: ${APP_NAME}
  namespace: itfasilkom
spec:
  replicas: 5
  selector:
    matchLabels:
      # app: kwl-dev-backend 
      app: ${APP_NAME}
  template:
    metadata:
      labels:
        # app: kwl-dev-backend 
        app: ${APP_NAME}
    spec:
      hostNetwork: true	
      hostAliases:
        - ip: "10.119.105.133"
          hostnames:
            - "minio-itf.cs.ui.ac.id"
      dnsPolicy: ClusterFirst
      containers:
      # - name: kwl-dev-backend
      - name: ${APP_NAME}
        # image: registry.cs.ui.ac.id/itf/kwl-dev-backend:latest
        image: ${DOCKER_REGISTRY}/${REGISTRY_PROJECT}/${APP_NAME}:${DOCKER_TAG}
        ports:
        - containerPort: 8042
      imagePullSecrets:
        - name: itf-registry

---
apiVersion: v1
kind: Service
metadata:
  # name: kwl-dev-backend
  name: ${APP_NAME}
  namespace: itfasilkom
spec:
  type: ClusterIP
  ports:
  - port: 40044
    targetPort: 8042
  selector:
    # app: kwl-dev-backend
    app: ${APP_NAME}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # name: be-kwl-dev.cs.ui.ac.id
  name: ${DOMAIN_NAME}.cs.ui.ac.id
  namespace: itfasilkom
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts: 
      # - be-kwl-dev.cs.ui.ac.id
      - ${DOMAIN_NAME}.cs.ui.ac.id
      secretName: cs12-tls
  rules:
  # - host: be-kwl-dev.cs.ui.ac.id
  - host: ${DOMAIN_NAME}.cs.ui.ac.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${APP_NAME}
            port:
              number: 40044
